--- a/diggy.css
+++ b/diggy.css
@@ -1,9 +1,8 @@
 .edit .controller.xbox {
-    background: url(https://RexxLifeVari.github.io/XboxSpot/diggybase.png);
+    background: url(https://RexxLifeVari.github.io/xbox/base/diggy_base.png);
 }
 
 
 .controller.edit {
-    background: url(https://RexxLifeVari.github.io/XboxSpot/diggybase.png);
+    background: url(https://RexxLifeVari.github.io/xbox/base/diggy_base.png);
 }
-
