--- a/ex.css
+++ b/ex.css
@@ -1,20 +1,8 @@
 .edit .controller.ds4 {
-    background: url(https://RexxLifeVari.github.io/Custom/exgtrbase.png);
+    background: url(https://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/ex_base.png);
 }
 
 
 .controller.edit {
-    background: url(https://RexxLifeVari.github.io/Custom/exgtrbase.png);
+    background: url(https://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/ex_base.png);
 }
-
-.edit .ds4.disconnected {
-    background: url(https://RexxLifeVari.github.io/Custom/disconnected2.png);
-}
-
-.edit .disconnected {
-    background: url(https://RexxLifeVari.github.io/Custom/disconnected2.png);
-}
-
-
-
-
