--- a/bini.css
+++ b/bini.css
@@ -1,10 +1,9 @@
-  
+
 .edit .controller.ds4 {
-    background: url(https://RexxLifeVari.github.io/ps4/base/bini_base.png);
+    background: url(https://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/diggy_base.png);
 }
 
 
 .controller.edit {
-    background: url(https://RexxLifeVari.github.io/ps4/base/bini_base.png);
+    background: url(https://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/diggy_base.png);
 }
-
