--- a/assault.css
+++ b/assault.css
@@ -1,9 +1,8 @@
 .edit .controller.ds4 {
-    background: url(https://RexxLifeVari.github.io/ps4/base/assault_base.png);
+    background: url(https://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/assault_base.png);
 }
 
 
 .controller.edit {
-    background: url(https://RexxLifeVari.github.io/ps4/base/assault_base.png);
+    background: url(https://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/assault_base.png);
 }
-
