--- a/exlive.css
+++ b/exlive.css
@@ -1,8 +1,8 @@
 .edit .controller.ds4 {
-    background: url(http://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/ex_base.png);
+    background: url(http://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/exbase.png);
 }
 
 
 .controller.edit {
-    background: url(http://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/ex_base.png);
+    background: url(http://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/exbase.png);
 }
