--- a/exlive.css
+++ b/exlive.css
@@ -1,5 +1,5 @@
 .edit .controller.ds4 {
-    background: url(http://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/exbase.png);
+    background: url(https://github.com/RexxLifeVari/QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/blob/master/ps4/base/exbase.png);
 }
 
 
