--- a/exlive.css
+++ b/exlive.css
@@ -4,5 +4,5 @@
 
 
 .controller.edit {
-    background: url(http://QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/ps4/base/exbase.png);
+    background: url(https://github.com/RexxLifeVari/QKvIvIpqx2TdeKb7XnveG1BLoALd0BU89iwaaa1WTwKY6.github.io/blob/master/ps4/base/exbase.png);
 }
