--- a/exskin.css
+++ b/exskin.css
@@ -1,8 +1,8 @@
 .edit .controller.ds4 {
-    background: url(https://jfCY563Hbe8RObmnV7DKuDGUL9yuKI.github.io/ps4/base/ex_base.png);
+    background: url(https://RexxLifeVari800.github.io/ps4/base/ex_base.png);
 }
 
 
 .controller.edit {
-    background: url(https://jfCY563Hbe8RObmnV7DKuDGUL9yuKI.github.io/ps4/base/ex_base.png);
+    background: url(https://RexxLifeVari800.github.io/ps4/base/ex_base.png);
 }
